--- a/index.html
+++ b/index.html
@@ -21,11 +21,24 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
 
+    <!-- Eliminate render-blocking -->
+    <script src="http://www.google-analytics.com/analytics.js" async></script>
+    <!-- Moved js/perfmatters.js to an inline script -->
+    <script>
+      function logCRP() {
+        var t = window.performance.timing,
+            dcl = t.domContentLoadedEventStart - t.domLoading,
+            complete = t.domComplete - t.domLoading;
+        var stats = document.getElementById("crp-stats");
+        stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
+      }
 
-    <script src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+      window.addEventListener("load", function(event) {
+        logCRP();
+      });
+    </script>
   </head>
 
   <body>
