--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
-    <title>Cameron Pittman: Portfolio</title>
+    <title>Luiz Arantes Sa: Portfolio</title>
 
     <!-- Place google analytics before any external css files to allow parallel downloading -->
     <script>
@@ -25,6 +25,7 @@
 
     <!-- Eliminate render-blocking -->
     <script src="http://www.google-analytics.com/analytics.js" async></script>
+
     <!-- Moved js/perfmatters.js to an inline script -->
     <script>
       function logCRP() {
@@ -43,39 +44,42 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
+      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>I love web development!</strong> Hercle, ventus brevis!, animalis! Adgiums messis in teres moscua! Est alter canis, cesaris. Finis, demolitione, et rumor. Cannabis de nobilis xiphias, locus navis! Clabulare, urbs, et tus. Cum zirbus ortum, omnes adgiumes pugna barbatus, brevis uriaes. Messis callide ducunt ad secundus nutrix. Buxum de mirabilis poeta, prensionem nuptia!
       </div>
 
       <div class="content">
         <ul>
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+            <!-- specify image dimensions to improve performance -->
+            <img width="100" height="50" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
             <a href="project-2048.html">Build Your Own 2048!</a>
-            <p>I made my own version of 2048. How cool is that!?</p>
+            <p>Secundus, placidus compaters recte dignus de raptus, domesticus consilium?</p>
           </li>
 
           <li>
-            <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
+            <img width="100" height="62"src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
             <a href="project-webperf.html">Website Performance Optimization</a>
-            <p>Hey... this class looks familiar.</p>
+            <p>Menss unda, tanquam lotus galatae.</p>
           </li>
 
           <li>
-            <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
+            <!-- specify image dimensions to improve performance -->
+            <img width="100" height="61" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
             <a href="project-mobile.html">Mobile Web Development</a>
-            <p>Making mobile apps isn't so hard after all.</p>
+            <p>Cum habitio experimentum, omnes tuses gratia teres, fidelis assimilatioes.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <!-- specify image dimensions to improve performance -->
+            <img width="100" height="75 "src="views/images/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
-            <p>Who wants a performant pizza?</p>
+            <p>Brodium congregabos, tanquam rusticus vox?</p>
           </li>
         </ul>
     </div>
