Resize image files

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <li>
             <!-- specify image dimensions to improve performance -->
-            <img width="100" height="75 "src="views/images/pizzeria.jpg">
+            <img width="100" height="75 "src="img/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Brodium congregabos, tanquam rusticus vox?</p>
           </li>
