--- a/index.html
+++ b/index.html
@@ -1,155 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
-    <title>Luiz Arantes Sa: Portfolio</title>
-
-    <!-- Place google analytics before any external css files to allow parallel downloading -->
-    <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-        w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
-
-    <!--<link href="css/style.css" rel="stylesheet">-->
-    <style>
-      html {
-        font-size: 100%;
-        overflow-y: scroll;
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
-        -ms-text-size-adjust: 100%;
-        -webkit-text-size-adjust: none;
-      }
-      body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
-      body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
-
-      a { color: #12C; }
-      a:visited { color: #61C; }
-      a:focus { outline: thin dotted; }
-      a:hover, a:active { color: #c00; outline: 0; }
-
-      b, strong { font-weight: bold; }
-      pre, code { font-family: monospace, monospace; font-size: 1em; }
-      ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
-      img { border: 0; max-width: 100%; }
-
-      body { background: #fff; }
-      header, footer, .container { max-width: 45em; margin: 0 auto; }
-
-      header { padding: 0 0.5em; color: #C90B0B; }
-      header img { border-radius: 40px; float: left; }
-      header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
-      header p span { font-size: 0.8em; font-weight: normal;}
-
-      .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
-        border-bottom: 1px solid #ccc;
-        border-top: 1px solid #ccc;
-      }
-
-      .content { padding: 1em 1em; }
-      .content li { list-style-type: none; font-size: 1.1em;}
-      li img { float:left; padding-right: 1em; }
-      li p { font-size: 0.9em; font-style: italic; }
-
-      footer {
-        padding: 0 0.5em;
-        border-top: 1px solid #ccc;
-      }
-      footer span { float: right; font-style: italic; }
-
-      /* Smartphones (portrait) */
-      @media only screen and (max-width: 480px) {
-        body { font-size: 12px;}
-        header p { padding-left: 4.5em;}
-      }
-
-    </style>
-
-    <!-- Eliminate render-blocking -->
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <script src="http://www.google-analytics.com/analytics.js" async></script>
-
-    <!-- Moved js/perfmatters.js to an inline script -->
-    <script>
-      function logCRP() {
-        var t = window.performance.timing,
-            dcl = t.domContentLoadedEventStart - t.domLoading,
-            complete = t.domComplete - t.domLoading;
-        var stats = document.getElementById("crp-stats");
-        stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
-      }
-
-      window.addEventListener("load", function(event) {
-        logCRP();
-      });
-
-      // Fetch Open Sans font after document has loaded to improve load speed
-      // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
-      var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(cb);
-      else window.addEventListener('load', cb);
-    </script>
-  </head>
-
-  <body>
-    <header>
-      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
-    </header>
-
-    <div class="container">
-      <div class="hero">
-        <strong>I love web development!</strong> Hercle, ventus brevis!, animalis! Adgiums messis in teres moscua! Est alter canis, cesaris. Finis, demolitione, et rumor. Cannabis de nobilis xiphias, locus navis! Clabulare, urbs, et tus. Cum zirbus ortum, omnes adgiumes pugna barbatus, brevis uriaes. Messis callide ducunt ad secundus nutrix. Buxum de mirabilis poeta, prensionem nuptia!
-      </div>
-
-      <div class="content">
-        <ul>
-          <li>
-            <!-- specify image dimensions to improve performance -->
-            <img width="100" height="50" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
-            <a href="project-2048.html">Build Your Own 2048!</a>
-            <p>Secundus, placidus compaters recte dignus de raptus, domesticus consilium?</p>
-          </li>
-
-          <li>
-            <img width="100" height="62"src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
-            <a href="project-webperf.html">Website Performance Optimization</a>
-            <p>Menss unda, tanquam lotus galatae.</p>
-          </li>
-
-          <li>
-            <!-- specify image dimensions to improve performance -->
-            <img width="100" height="61" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
-            <a href="project-mobile.html">Mobile Web Development</a>
-            <p>Cum habitio experimentum, omnes tuses gratia teres, fidelis assimilatioes.</p>
-          </li>
-
-          <li>
-            <!-- specify image dimensions to improve performance -->
-            <img width="100" height="75 "src="img/pizzeria.jpg">
-            <a href="views/pizza.html">Cam's Pizzeria</a>
-            <p>Brodium congregabos, tanquam rusticus vox?</p>
-          </li>
-        </ul>
-    </div>
-
-    <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="description" content="Project 4 Web Performance"> <meta name="author" content="Luiz Arantes Sa"> <title>Luiz Arantes Sa: Portfolio</title> <script>(function(a,b){a.GoogleAnalyticsObject=b;a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)};a[b].l=1*new Date})(window,"ga");ga("create","UA-XXXX-Y");ga("send","pageview");function logCRP(){var a=window.performance.timing,b=a.domContentLoadedEventStart-a.domLoading,a=a.domComplete-a.domLoading;document.getElementById("crp-stats").textContent="DCL: "+b+"ms, onload: "+a+"ms"}window.addEventListener("load",function(a){logCRP()}); var cb=function(){var a=document.createElement("link");a.rel="stylesheet";a.href="//fonts.googleapis.com/css?family=Open+Sans:400,700";var b=document.getElementsByTagName("head")[0];b.parentNode.insertBefore(a,b)},raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame;raf?raf(cb):window.addEventListener("load",cb);</script> <style>html{font-size:100%;overflow-y:scroll;-webkit-tap-highlight-color:transparent;-ms-text-size-adjust:100%;-webkit-text-size-adjust:none}body{margin:0;font-size:14px;line-height:1.61;font-weight:400;background:#fff}body,button,input,select,textarea{font-family:'Open Sans',sans-serif;color:#333}a{color:#12C}a:visited{color:#61C}a:focus{outline:dotted thin}a:active,a:hover{color:#c00;outline:0}b,strong{font-weight:700}code,pre{font-family:monospace,monospace;font-size:1em}ol,ul{margin:1em 0;padding:0 0 0 20px}img{border:0;max-width:100%}.container,footer,header{max-width:45em;margin:0 auto}header{padding:0 .5em;color:#C90B0B}header img{border-radius:40px;float:left}header p{font-size:1.5em;font-weight:700;padding-left:4em}header p span{font-size:.8em;font-weight:400}.hero{padding:2em;background-color:#f8f8f8;font-size:1.2em;border-bottom:1px solid #ccc;border-top:1px solid #ccc}.content{padding:1em}.content li{list-style-type:none;font-size:1.1em}li img{float:left;padding-right:1em}li p{font-size:.9em;font-style:italic}footer{padding:0 .5em;border-top:1px solid #ccc}footer span{float:right;font-style:italic}@media only screen and (max-width:480px){body{font-size:12px}header p{padding-left:4.5em}}</style> <link href="css/print.css" rel="stylesheet" media="print"> <script src="http://www.google-analytics.com/analytics.js" async></script> </head> <body> <header> <a href="/"><img width="70" height="70" src="img/profilepic.png"></a> <p>Luiz Arantes Sa<br><span>Web Developer</span></p></header> <div class="container"> <div class="hero"> <strong>I love web development!</strong> Hercle, ventus brevis!, animalis! Adgiums messis in teres moscua! Est alter canis, cesaris. Finis, demolitione, et rumor. Cannabis de nobilis xiphias, locus navis! Clabulare, urbs, et tus. Cum zirbus ortum, omnes adgiumes pugna barbatus, brevis uriaes. Messis callide ducunt ad secundus nutrix. Buxum de mirabilis poeta, prensionem nuptia! </div><div class="content"> <ul> <li> <img width="100" height="50" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href="project-2048.html">Build Your Own 2048!</a> <p>Secundus, placidus compaters recte dignus de raptus, domesticus consilium?</p></li><li> <img width="100" height="62" src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href="project-webperf.html">Website Performance Optimization</a> <p>Menss unda, tanquam lotus galatae.</p></li><li> <img width="100" height="61" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href="project-mobile.html">Mobile Web Development</a> <p>Cum habitio experimentum, omnes tuses gratia teres, fidelis assimilatioes.</p></li><li> <img width="100" height="75 " src="img/pizzeria.jpg"> <a href="views/pizza.html">Cam's Pizzeria</a> <p>Brodium congregabos, tanquam rusticus vox?</p></li></ul> </div><footer> <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p></footer> </div></body></html>
