--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="Udacity Project 4">
+    <meta name="author" content="Luiz Arantes Sa">
     <title>Luiz Arantes Sa: Portfolio</title>
 
-    <!-- Place google analytics before any external css files to allow parallel downloading -->
+    <!-- Google Analytics (Asynchronous to improve page load speed) -->
+    <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-        w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
       // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
+      ga('create', 'UA-XXXX-Y', 'auto');
       ga('send', 'pageview');
+
+      // Navigation Timing
+      window.addEventListener("load", function(event) {
+        var t = window.performance.timing,
+            dcl = t.domContentLoadedEventStart - t.domLoading,
+            complete = t.domComplete - t.domLoading;
+        var stats = document.getElementById("crp-stats");
+        stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
+      });
+
+      // Fetch 'Open Sans' font with javaScript to prevent css render blocking
+      // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
+      var cb = function() {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+          webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(cb);
+      else window.addEventListener('load', cb);
+
     </script>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
-
-    <!--<link href="css/style.css" rel="stylesheet">-->
+    <!-- Add media print on print css to prevent render blocking-->
+    <link href="css/print.css" rel="stylesheet" media="print">
+    <!-- Use internal style css to preventrender blocking -->
     <style>
       html {
         font-size: 100%;
@@ -56,9 +75,9 @@
       }
 
       .content { padding: 1em 1em; }
-      .content li { list-style-type: none; font-size: 1.1em;}
-      li img { float:left; padding-right: 1em; }
-      li p { font-size: 0.9em; font-style: italic; }
+      .content li { list-style-type: none; font-size: 1.1em; display: inline-block;}
+      li img { float:left; padding-right: 1em;}
+      li p { display: block; font-size: 0.9em; font-style: italic; }
 
       footer {
         padding: 0 0.5em;
@@ -73,83 +92,50 @@
       }
 
     </style>
-
-    <!-- Eliminate render-blocking -->
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <script src="http://www.google-analytics.com/analytics.js" async></script>
-
-    <!-- Moved js/perfmatters.js to an inline script -->
-    <script>
-      function logCRP() {
-        var t = window.performance.timing,
-            dcl = t.domContentLoadedEventStart - t.domLoading,
-            complete = t.domComplete - t.domLoading;
-        var stats = document.getElementById("crp-stats");
-        stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
-      }
-
-      window.addEventListener("load", function(event) {
-        logCRP();
-      });
-
-      // Fetch Open Sans font after document has loaded to improve load speed
-      // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
-      var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(cb);
-      else window.addEventListener('load', cb);
-    </script>
   </head>
-
   <body>
     <header>
       <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
+
       <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> Hercle, ventus brevis!, animalis! Adgiums messis in teres moscua! Est alter canis, cesaris. Finis, demolitione, et rumor. Cannabis de nobilis xiphias, locus navis! Clabulare, urbs, et tus. Cum zirbus ortum, omnes adgiumes pugna barbatus, brevis uriaes. Messis callide ducunt ad secundus nutrix. Buxum de mirabilis poeta, prensionem nuptia!
+        <strong>I love web development!</strong> This portfolio shows all the projects I have done in Udacity's
+        Front-End Web Developer course.
       </div>
 
       <div class="content">
         <ul>
           <li>
-            <!-- specify image dimensions to improve performance -->
-            <img width="100" height="50" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
-            <a href="project-2048.html">Build Your Own 2048!</a>
-            <p>Secundus, placidus compaters recte dignus de raptus, domesticus consilium?</p>
-          </li>
+            <img width="100" height="80" src="img/p1-preview.png">
+            <a href="http://github.com/LuizGsa21/p1-mockup">Project P1: Mockup to Website</a>
 
+            <p>Replicate a design mockup from a PDF-file using HTML and CSS.</p>
+          </li>
           <li>
-            <img width="100" height="62"src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
-            <a href="project-webperf.html">Website Performance Optimization</a>
-            <p>Menss unda, tanquam lotus galatae.</p>
+            <img width="100" height="80" src="img/p2-preview.png">
+            <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">Project P2: Interactive Resume</a>
+            <p>Create an interactive resume using JavaScript and jQuery.</p>
           </li>
-
           <li>
             <!-- specify image dimensions to improve performance -->
-            <img width="100" height="61" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
-            <a href="project-mobile.html">Mobile Web Development</a>
-            <p>Cum habitio experimentum, omnes tuses gratia teres, fidelis assimilatioes.</p>
+            <img width="100" height="80" src="img/p3-preview.png">
+            <a href="https://github.com/LuizGsa21/p3-arcade-game">Project P3: Classic Arcade Game Clone</a>
+            <p>Recreate the classic arcade game Frogger!</p>
           </li>
-
           <li>
             <!-- specify image dimensions to improve performance -->
-            <img width="100" height="75 "src="img/pizzeria.jpg">
-            <a href="views/pizza.html">Cam's Pizzeria</a>
-            <p>Brodium congregabos, tanquam rusticus vox?</p>
+            <img width="100" height="80 " src="img/pizzeria.jpg">
+            <a href="views/pizza.html">Project P4: Website Optimization</a>
+            <p>Optimize a provided website to run at 60 frames per second and achieve a target PageSpeed score of 90.</p>
           </li>
         </ul>
+      </div>
+      <footer>
+        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+      </footer>
     </div>
-
-    <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
-    </footer>
   </body>
 </html>
