Change project 1 href to project-1.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
   <body>
     <header>
       <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-
       <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
     </header>
 
@@ -110,7 +109,7 @@
         <ul>
           <li>
             <img width="100" height="80" src="img/p1-preview.png">
-            <a href="http://github.com/LuizGsa21/p1-mockup">Project P1: Mockup to Website</a>
+            <a href="project-1.html">Project P1: Mockup to Website</a>
 
             <p>Replicate a design mockup from a PDF-file using HTML and CSS.</p>
           </li>
