Add missing paragraph in hero div

--- a/project-1.html
+++ b/project-1.html
@@ -102,9 +102,9 @@
 
     <div class="container">
       <div class="hero">
-        <strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to
-        define the content of a web page and how to treat every web page as a number of boxes on the screen
-        to easily replicate a design.
+        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to
+          define the content of a web page and how to treat every web page as a number of boxes on the screen
+          to easily replicate a design.</p>
       </div>
 
       <div class="content">
