Update href links

--- a/project-3.html
+++ b/project-3.html
@@ -109,7 +109,7 @@
 
       <div class="content">
         <img src="img/p1-original.png">
-        <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p>
+        <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p>
       </div>
 
       <a href="index.html">Back to Home Page</a>
