--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           </li>
           <li>
             <img width="100" height="80" src="img/p2-preview.png">
-            <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">Project P2: Interactive Resume</a>
+            <a href="project-2.html">Project P2: Interactive Resume</a>
             <p>Create an interactive resume using JavaScript and jQuery.</p>
           </li>
           <li>
             <!-- specify image dimensions to improve performance -->
             <img width="100" height="80" src="img/p3-preview.png">
-            <a href="https://github.com/LuizGsa21/p3-arcade-game">Project P3: Classic Arcade Game Clone</a>
+            <a href="project-3.html">Project P3: Classic Arcade Game Clone</a>
             <p>Recreate the classic arcade game Frogger!</p>
           </li>
           <li>
