Add project 2 page content

--- a/project-2.html
+++ b/project-2.html
@@ -102,13 +102,13 @@
 
     <div class="container">
       <div class="hero">
-        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to
-          define the content of a web page and how to treat every web page as a number of boxes on the screen
-          to easily replicate a design.</p>
+        <p><strong>Interactive resume!</strong> In this project I learned how to turn static web pages into dynamic applications by using Javascript and jQuery. I also got to explore with
+          <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps JavaScript API</a>, to
+          embed an interactive map in the resume.</p>
       </div>
 
       <div class="content">
-        <img src="img/p1-original.png">
+        <img src="img/p2-original.png">
         <p>View project on <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">GitHub</a></p>
       </div>
 
