Update project 2 description

--- a/project-2.html
+++ b/project-2.html
@@ -103,8 +103,8 @@
     <div class="container">
       <div class="hero">
         <p><strong>Interactive resume!</strong> In this project I learned how to turn static web pages into dynamic applications by using Javascript and jQuery. I also got to explore with
-          <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps JavaScript API</a>, to
-          embed an interactive map in the resume.</p>
+          <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps JavaScript API</a> to
+          embed an interactive map.</p>
       </div>
 
       <div class="content">
