Add project 3 content

--- a/project-3.html
+++ b/project-3.html
@@ -102,13 +102,11 @@
 
     <div class="container">
       <div class="hero">
-        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to
-          define the content of a web page and how to treat every web page as a number of boxes on the screen
-          to easily replicate a design.</p>
+        <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features to write eloquently designed classes capable of creating countless instances of similarly functioning objects.</p>
       </div>
 
       <div class="content">
-        <img src="img/p1-original.png">
+        <img src="img/p3-original.png">
         <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p>
       </div>
 
