Add width and height dimensions to project images

--- a/project-1.html
+++ b/project-1.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="content">
-        <img src="img/p1-original.png">
+        <img width="602" height="496" src="img/p1-original.png">
         <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p>
       </div>
 
