--- a/project-2.html
+++ b/project-2.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="content">
-        <img src="img/p2-original.png">
+        <img width="602" height="646" src="img/p2-original.png">
         <p>View project on <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">GitHub</a></p>
       </div>
 
