--- a/project-3.html
+++ b/project-3.html
@@ -106,7 +106,7 @@
       </div>
 
       <div class="content">
-        <img src="img/p3-original.png">
+        <img  width="602" height="618" src="img/p3-original.png">
         <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p>
       </div>
 
