Update project info

--- a/project-3.html
+++ b/project-3.html
@@ -102,7 +102,7 @@
 
     <div class="container">
       <div class="hero">
-        <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features to write eloquently designed classes capable of creating countless instances of similarly functioning objects.</p>
+        <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features and how to break down a complex problem into manageable sub-problems to create a well-architected application.</p>
       </div>
 
       <div class="content">
