--- a/project-1.html
+++ b/project-1.html
@@ -102,9 +102,7 @@
 
     <div class="container">
       <div class="hero">
-        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to
-          define the content of a web page and how to treat every web page as a number of boxes on the screen
-          to easily replicate a design.</p>
+        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat the page content as boxes on the screen to easily replicate any design. </p>
       </div>
 
       <div class="content">
