--- a/project-1.html
+++ b/project-1.html
@@ -91,6 +91,13 @@
         header p { padding-left: 4.5em;}
       }
 
+      .img-responsive {
+        display: block;
+        width: 100% \9;
+        max-width: 100%;
+        height: auto;
+      }
+
     </style>
   </head>
 
@@ -106,7 +113,7 @@
       </div>
 
       <div class="content">
-        <img width="602" height="496" src="img/p1-original.png">
+        <img class="img-responsive" width="602" height="496" src="img/p1-original.png">
         <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p>
       </div>
 
