--- a/project-2.html
+++ b/project-2.html
@@ -91,6 +91,13 @@
         header p { padding-left: 4.5em;}
       }
 
+      .img-responsive {
+        display: block;
+        width: 100% \9;
+        max-width: 100%;
+        height: auto;
+      }
+
     </style>
   </head>
 
@@ -108,7 +115,7 @@
       </div>
 
       <div class="content">
-        <img width="602" height="646" src="img/p2-original.png">
+        <img class="img-responsive" width="602" height="646" src="img/p2-original.png">
         <p>View project on <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">GitHub</a></p>
       </div>
 
