Optimize css file by removing descendant selectors (Not all were removed)

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
-    </header>
-
     <div class="container">
+      <header>
+        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
+        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
+      </header>
+
       <div class="hero">
         <strong>I love web development!</strong> This portfolio shows all the projects I have done in Udacity's
         Front-End Web Developer course.
       </div>
 
       <div class="content">
-        <ul>
+        <ul class="project-list">
           <li>
             <img width="100" height="80" src="img/p1-preview.png">
             <a href="project-1.html">Project P1: Mockup to Website</a>
