--- a/project-2.html
+++ b/project-2.html
@@ -44,12 +44,12 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
-    </header>
-
     <div class="container">
+      <header>
+        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
+        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
+      </header>
+
       <div class="hero">
         <p><strong>Interactive resume!</strong> In this project I learned how to turn static web pages into dynamic applications by using Javascript and jQuery. I also got to explore with
           <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps JavaScript API</a> to
