--- a/project-3.html
+++ b/project-3.html
@@ -44,12 +44,11 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
-    </header>
-
     <div class="container">
+      <header>
+        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
+        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
+      </header>
       <div class="hero">
         <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features and how to break down a complex problem into manageable sub-problems to create a well-architected application.</p>
       </div>
