--- a/project-1.html
+++ b/project-1.html
@@ -44,12 +44,11 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"><img width="70" height="70" src="img/profilepic.png"></a>
-      <p>Luiz Arantes Sa<br><span>Web Developer</span></p>
-    </header>
-
     <div class="container">
+      <header>
+        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
+        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
+      </header>
       <div class="hero">
         <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat the page content as boxes on the screen to easily replicate any design. </p>
       </div>
