Fix href link to pizza.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li>
             <!-- specify image dimensions to improve performance -->
             <img width="100" height="80 " src="img/pizzeria.jpg">
-            <a href="views/pizza.html">Project P4: Website Optimization</a>
+            <a href="pizza.html">Project P4: Website Optimization</a>
             <p>Optimize a provided website to run at 60 frames per second and achieve a target PageSpeed score of 90.</p>
           </li>
         </ul>
