Update image href

--- a/project-2.html
+++ b/project-2.html
@@ -173,7 +173,7 @@
       </div>
 
       <div class="content">
-        <img class="img-responsive" width="602" height="646" src="img/p2-original.png">
+        <img class="img-responsive" width="602" height="646" src="img/p2-original.jpg">
         <p>View project on <a href="https://github.com/LuizGsa21/frontend-nanodegree-resume">GitHub</a></p>
       </div>
 
