--- a/project-1.html
+++ b/project-1.html
@@ -171,7 +171,7 @@
       </div>
 
       <div class="content">
-        <img class="img-responsive" width="602" height="496" src="img/p1-original.png">
+        <img class="img-responsive" width="602" height="496" src="img/p1-original.jpg">
         <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p>
       </div>
 
