--- a/project-3.html
+++ b/project-3.html
@@ -170,7 +170,7 @@
       </div>
 
       <div class="content">
-        <img  class="img-responsive" width="602" height="618" src="img/p3-original.png">
+        <img  class="img-responsive" width="602" height="618" src="img/p3-original.jpg">
         <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p>
       </div>
 
